<resources>
    <string name="app_name">Covid19App</string>
    <string name="title_home">Home</string>
    <string name="title_countries">Countries</string>
    <string name="title_faq">FAQ</string>
    <string name="cases">Cases</string>
    <string name="country">Country</string>
    <string name="search">Search</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="tests">Tests</string>
    <string name="title_activity_maps">Map</string>
    <string name="dashboard">Dashboard</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="statistics">Statistics</string>
</resources>