<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.walter.covid19app.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.walter.covid19app.ui.home.HomeFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_countryList"
        android:name="com.walter.covid19app.ui.countries.CountryListFragment"
        android:label="@string/title_countries"
        tools:layout="@layout/fragment_country_list" />

    <fragment
        android:id="@+id/navigation_faq"
        android:name="com.walter.covid19app.ui.faq.FAQFragment"
        android:label="@string/title_faq"
        tools:layout="@layout/activity_maps" />
</navigation>