<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcfc">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="#fcfcfc"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:gravity="center">
                <androidx.cardview.widget.CardView
                    android:foreground="?selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="125dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/mask"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="Active"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/dActiveTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="1000"
                            android:padding="5dp"
                            android:textColor="@color/colorPrimaryDark"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:foreground="?selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="125dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/syringe"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/tests"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/dTestTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="1000"
                            android:padding="5dp"
                            android:textColor="@color/colorPrimaryDark"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:gravity="center">
                <androidx.cardview.widget.CardView
                    android:foreground="?selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="125dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/hospital"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/deaths"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/dDeathsTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="1000"
                            android:padding="5dp"
                            android:textColor="@color/colorPrimaryDark"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:foreground="?selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="125dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/ic_recovered"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/recovered"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/dRecoveredTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="1000"
                            android:padding="5dp"
                            android:textColor="@color/colorPrimaryDark"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/updatedTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="Date: 12/05/2020 13:00 pm"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>